# xlSQL

./: .gitignore  README.md  pyproject.toml
design/: skill模板.md  xlSQL_设计文档.md
src/xlsql/: __init__.py  cli.py  engine.py  loader.py  prepare.py  utils.py
src/xlsql/assets/: xlsql_readme.md  xlsql_skill.md
test/: cleaned.xlsx  messy.xlsx  messy_real.xlsx  sales.csv  test_fix.py
