[project]
name = "xlsql"
version = "0.1.1"
description = "一个面向 AI Agent 的本地 Excel/CSV/JSON SQL 查询工具"
authors = [
    { name = "GSD Developer", email = "dev@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.6.0",
    "fastexcel>=0.11.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0",
    "pyarrow>=17.0.0",
]

[project.scripts]
xlsql = "xlsql.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsql"]

[tool.hatch.build.targets.sdist]
include = ["/src/xlsql"]
